--- a/ru/index.html
+++ b/ru/index.html
@@ -264,7 +264,7 @@ public interface UserSql {
                 </p>
                 <p>
                     Соответствие SQL и Java параметров строится по их именам. Для этого для Java параметров используется аннотация <i>@Bind</i>
-                    в которой указывается имя соответствующего SQL параметра. Также, для объектных типов возможно использование аннотации @BindBean:
+                    в которой указывается имя соответствующего SQL параметра. Также, для объектных типов возможно использование аннотации <i>@BindBean</i>:
                     в этом случае в качестве параметров SQL будут подставлены имена и значения полей Java объекта.
                     Поля объекта должны быть публичными, либо иметь публичные <i>get</i>-методы.
                 </p>
