--- a/ru/index.html
+++ b/ru/index.html
@@ -287,7 +287,8 @@ public interface UserSql {
                     для них возврат генерируемого значения происходит по умолчанию.
                 </p>
                 <p>
-                    В случае, если Java параметр является коллекцией, итератором или массивом, вместо одного запроса будет выполнена серия <a href="#Batch">batch-запросов</a>.
+                    В случае, если Java параметр является коллекцией (<i>java.util.Iterable</i>), итератором (<i>java.util.Iterator</i>) или Java массивом,
+                    вместо одного запроса будет выполнена серия <a href="#Batch">batch-запросов</a>.
                 </p>
 
             </section>
