--- a/ru/index.html
+++ b/ru/index.html
@@ -440,7 +440,7 @@ public final class DbTimer {
                         функционал интерфейсов mJDBC недостаточен.
                     </p>
                     <p>
-                        Для того, чтобы выполнить транзакционную SQL операцию без использования SQL интерфейса можно использовать одни из следующих методов mJDBC:
+                        Для того, чтобы выполнить транзакционную SQL операцию без использования Транзакционного интерфейса можно использовать одни из следующих методов mJDBC:
                     </p>
                 <pre class="prettyprint">
 @Nullable
